--- a/package.json
+++ b/package.json
@@ -30,33 +30,33 @@
     ]
   },
   "dependencies": {
-    "@vercel/analytics": "^1.0.0",
-    "hosted-git-info": "^6.1.1",
-    "lru-cache": "^7.18.3",
-    "next": "^13.3.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "styled-components": "^5.3.9",
-    "styled-normalize": "^8.0.7",
-    "url": "^0.11.0"
+    "@vercel/analytics": "1.0.0",
+    "hosted-git-info": "6.1.1",
+    "lru-cache": "7.18.3",
+    "next": "13.3.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "styled-components": "5.3.9",
+    "styled-normalize": "8.0.7",
+    "url": "0.11.0"
   },
   "devDependencies": {
-    "@kachkaev/eslint-config-react": "^0.5.1",
-    "@kachkaev/markdownlint-config": "^0.5.0",
-    "@kachkaev/prettier-config": "^1.4.0",
-    "@next/eslint-plugin-next": "^13.3.1",
-    "@rushstack/eslint-patch": "^1.2.0",
-    "@types/hosted-git-info": "^3.0.2",
-    "@types/node": "^18.16.0",
-    "@types/react": "^18.0.38",
-    "@types/styled-components": "^5.1.26",
-    "eslint": "^8.39.0",
-    "husky": "^8.0.3",
-    "lint-staged": "^13.2.1",
-    "markdownlint-cli": "^0.33.0",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^2.8.8",
-    "typescript": "^5.0.4"
+    "@kachkaev/eslint-config-react": "0.5.1",
+    "@kachkaev/markdownlint-config": "0.5.0",
+    "@kachkaev/prettier-config": "1.4.0",
+    "@next/eslint-plugin-next": "13.3.1",
+    "@rushstack/eslint-patch": "1.2.0",
+    "@types/hosted-git-info": "3.0.2",
+    "@types/node": "18.16.0",
+    "@types/react": "18.0.38",
+    "@types/styled-components": "5.1.26",
+    "eslint": "8.39.0",
+    "husky": "8.0.3",
+    "lint-staged": "13.2.1",
+    "markdownlint-cli": "0.33.0",
+    "npm-run-all": "4.1.5",
+    "prettier": "2.8.8",
+    "typescript": "5.0.4"
   },
   "packageManager": "yarn@4.0.0-rc.42"
 }
