--- a/package.json
+++ b/package.json
@@ -45,6 +45,9 @@
     "@kachkaev/markdownlint-config": "0.5.0",
     "@next/eslint-plugin-next": "13.4.4",
     "@rushstack/eslint-patch": "1.3.0",
+    "@tsconfig/esm": "1.0.3",
+    "@tsconfig/next": "1.0.5",
+    "@tsconfig/strictest": "2.0.1",
     "@types/hosted-git-info": "3.0.2",
     "@types/node": "18.16.16",
     "@types/react": "18.2.8",
