--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/node": "20.9.0",
     "@types/react": "18.2.37",
     "eslint": "8.53.0",
+    "eslint-import-resolver-typescript": "3.6.1",
     "husky": "8.0.3",
     "lint-staged": "15.1.0",
     "markdownlint-cli": "0.37.0",
