--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "devDependencies": {
     "@kachkaev/eslint-config-react": "0.6.0",
     "@kachkaev/markdownlint-config": "0.5.0",
+    "@kachkaev/prettier-config": "2.1.3",
     "@next/eslint-plugin-next": "16.0.1",
     "@rushstack/eslint-patch": "1.14.1",
     "@tsconfig/next": "2.0.3",
